src/components/atoms/highlight-popup/_architecture.scss
@use '../../../_generics' as generics;
@use 'variables' as vars;

/// -----------------------------------------------------------------------------
/// Component token map
/// -----------------------------------------------------------------------------
$component-map: (
    duration: vars.$duration,
    delay: vars.$delay,
    border-width: vars.$width,
    padding: vars.$padding,
    skew: vars.$skew,
    skew-distance: vars.$skew-distance
);

@mixin highlight-popup-architecture($prefix: vars.$css-ui-component-prefix) {
    @include generics.generate-vars($component-map, $prefix);
    @include generics.base-layout($prefix);
    @include generics.position-base-layout();
    @include generics.transition-properties((background-color), var(--#{$prefix}duration), ease-out);

    &::before,
    &::after {
        content: '';
        @include generics.position-full-layout(-1, 'absolute');
        @include generics.transition-properties((background-color, opacity, transform), var(--#{$prefix}duration), ease-out);
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-horizontal,
    &.#{generics.$css-ui-class-prefix}highlight-popup-vertical,
    &.#{generics.$css-ui-class-prefix}highlight-popup-explosion,
    &.#{generics.$css-ui-class-prefix}highlight-popup-fill,
    &.#{generics.$css-ui-class-prefix}highlight-popup-drop,
    &.#{generics.$css-ui-class-prefix}highlight-popup-bounce {
        &::before {
            background-color: rgba(var(--#{vars.$css-ui-var-prefix}main-color) / var(--#{vars.$css-ui-var-prefix}main-color-opacity, 1));
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-border {
        &::after {
            border: var(--#{$prefix}border-width) solid currentColor;
            border-color: rgba(var(--#{vars.$css-ui-var-prefix}main-color) / var(--#{vars.$css-ui-var-prefix}main-color-opacity, 1));
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-horizontal,
    &.#{generics.$css-ui-class-prefix}highlight-popup-vertical {
        &::before {
            opacity: 0;
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-horizontal {
        &::before {
            transform: scale(0, 1);
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-vertical {
        &::before {
            transform: scale(1, 0);
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-explosion {
        &::before {
            opacity: 0;
            transform: scale(0, 0);
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-fill {
        &::before {
            @include generics.transition-properties((border-radius), var(--#{$prefix}duration), ease-out);

            transform: scale(0, 0);
            opacity: 0;
            border-radius: 50%;
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-drop {
        &::before {
            opacity: 0;
            transform: scale(1.3, 1.3);
        }
    }

    &.#{generics.$css-ui-class-prefix}highlight-popup-bounce {
        &::before {
            opacity: 0;
            transform: scale(0, 0);
        }
    }

    /// Shared setup for all four skew corner variants: clips the sliding pseudo-element.
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-top-left,
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-top-right,
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-bottom-left,
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-bottom-right {
        overflow: hidden;

        &::before {
            background-color: rgba(var(--#{vars.$css-ui-var-prefix}main-color) / var(--#{vars.$css-ui-var-prefix}main-color-opacity, 1));
            height: 110%;
        }
    }

    /// Skew from top-left: slides in from the left anchored at the top ("skew left to right").
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-top-left {
        &::before {
            top: 0;
            transform: skewX(var(--#{$prefix}skew)) translateX(-200%);
        }
    }

    /// Skew from top-right: slides in from the right anchored at the top ("skew right to left").
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-top-right {
        &::before {
            top: 0;
            transform: skewX(var(--#{$prefix}skew)) translateX(200%);
        }
    }

    /// Skew from bottom-left: slides in from the left anchored at the bottom.
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-bottom-left {
        &::before {
            top: inherit;
            bottom: 0;
            transform: skewX(var(--#{$prefix}skew)) translateX(-200%);
        }
    }

    /// Skew from bottom-right: slides in from the right anchored at the bottom ("skew right to left").
    &.#{generics.$css-ui-class-prefix}highlight-popup-skew-bottom-right {
        &::before {
            top: inherit;
            bottom: 0;
            transform: skewX(var(--#{$prefix}skew)) translateX(200%);
        }
    }

    /// Interaction states
    @include generics.interaction-states() {
        &.#{generics.$css-ui-class-prefix}highlight-popup-horizontal,
        &.#{generics.$css-ui-class-prefix}highlight-popup-vertical,
        &.#{generics.$css-ui-class-prefix}highlight-popup-explosion,
        &.#{generics.$css-ui-class-prefix}highlight-popup-fill,
        &.#{generics.$css-ui-class-prefix}highlight-popup-drop,
        &.#{generics.$css-ui-class-prefix}highlight-popup-bounce {
            &::before {
                background-color: rgba(var(--#{vars.$css-ui-var-prefix}active-main-color) / var(--#{vars.$css-ui-var-prefix}active-main-color-opacity, 1));
            }
        }

        &.#{generics.$css-ui-class-prefix}highlight-border {
            &::after {
                border-color: currentcolor;
                border-color: rgba(var(--#{vars.$css-ui-var-prefix}active-main-color) / var(--#{vars.$css-ui-var-prefix}active-main-color-opacity, 1));
            }
        }

        &.#{generics.$css-ui-class-prefix}highlight-popup-horizontal,
        &.#{generics.$css-ui-class-prefix}highlight-popup-vertical {
            &::before {
                opacity: 1;
                transform: scale(1, 1);
            }

            &::after {
                transform: scale(1, 0.1);
                opacity: 0;
            }
        }

        &.#{generics.$css-ui-class-prefix}highlight-popup-explosion {
            &::before {
                opacity: 1;
                transform: scale(1, 1);
            }

            &::after {
                transform: scale(0, 0);
                opacity: 0;
            }
        }

        &.#{generics.$css-ui-class-prefix}highlight-popup-fill {
            &::before {
                opacity: 1;
                border-radius: 0;
                transform: scale(1, 1);
            }

            &::after {
                opacity: 0;
            }
        }

        &.#{generics.$css-ui-class-prefix}highlight-popup-drop {
            &::before {
                opacity: 1;
                transform: scale(1, 1);
            }

            &::after {
                opacity: 0;
                transform: scale(0, 0);
            }
        }

        &.#{generics.$css-ui-class-prefix}highlight-popup-bounce {
            span {
                transform: scale(1.2, 1.2);
            }

            &::after {
                opacity: 0;
            }

            &::before {
                opacity: 1;
                transform: scale(1, 1);
                animation-name: #{generics.$css-ui-class-prefix}#{vars.$css-ui-component-name}-animation;
                animation-duration: var(--#{$prefix}duration);
                animation-delay: var(--#{$prefix}delay);
            }
        }

        /// All four skew corner variants reveal the background by sliding the skewed pseudo-element into view.
        &.#{generics.$css-ui-class-prefix}highlight-popup-skew-top-left,
        &.#{generics.$css-ui-class-prefix}highlight-popup-skew-top-right,
        &.#{generics.$css-ui-class-prefix}highlight-popup-skew-bottom-left,
        &.#{generics.$css-ui-class-prefix}highlight-popup-skew-bottom-right {
            &::before {
                background-color: rgba(var(--#{vars.$css-ui-var-prefix}active-main-color) / var(--#{vars.$css-ui-var-prefix}active-main-color-opacity, 1));
                opacity: 1;
                transform: skewX(var(--#{$prefix}skew)) translateX(0);
            }
        }
    }

}

